@@ -12,7 +12,7 @@
       <div id="bannerrow1">
         <table class="bannerparthead" cellspacing="0">
           <tr id="hdr">
-            <td class="runninghead">Common Logging 2.0 API Reference</td>
+            <td class="runninghead">Common Logging 2.1 API Reference</td>
             <td class="product">
             </td>
           </tr>
@@ -88,7 +88,7 @@ you want to log everything to System.Diagnostics.Trace, Common.Logging is for yo
      <span style="color: #A31515">&lt;assemblyBinding</span> <span style="color: #FF0000">xmlns</span>=<span style="color: #0000FF">"urn:schemas-microsoft-com:asm.v1"</span><span style="color: #A31515">&gt;</span>
         <span style="color: #A31515">&lt;dependentAssembly&gt;</span>
            <span style="color: #A31515">&lt;assemblyIdentity</span> <span style="color: #FF0000">name</span>=<span style="color: #0000FF">"Common.Logging"</span> <span style="color: #FF0000">publicKeyToken</span>=<span style="color: #0000FF">"af08829b84f0328e"</span>&nbsp;<span style="color: #A31515">/&gt;</span>
-           <span style="color: #A31515">&lt;bindingRedirect</span> <span style="color: #FF0000">oldVersion</span>=<span style="color: #0000FF">"0.0.0.0-65535.65535.65535.65535"</span> <span style="color: #FF0000">newVersion</span>=<span style="color: #0000FF">"2.0.0.0"</span>&nbsp;<span style="color: #A31515">/&gt;</span>
+           <span style="color: #A31515">&lt;bindingRedirect</span> <span style="color: #FF0000">oldVersion</span>=<span style="color: #0000FF">"0.0.0.0-65535.65535.65535.65535"</span> <span style="color: #FF0000">newVersion</span>=<span style="color: #0000FF">"2.1.0.0"</span>&nbsp;<span style="color: #A31515">/&gt;</span>
         <span style="color: #A31515">&lt;/dependentAssembly&gt;</span>
      <span style="color: #A31515">&lt;/assemblyBinding&gt;</span>
   <span style="color: #A31515">&lt;/runtime&gt;</span>
@@ -97,7 +97,7 @@ you want to log everything to System.Diagnostics.Trace, Common.Logging is for yo
       <p>Those who implemented their own
       <span style="color: #2B91AF">Common.Logging.ILoggerFactoryAdapter</span> and
       <span style="color: #2B91AF">Common.Logging.ILog</span> interfaces, need to
-      update their code to the extended interfaces coming with version 2.0.
+      update their code to the extended interfaces coming with version 2.1.
       For convenience Common.Logging comes with a couple of support classes,
       making this task as easy as possible as described in the reference documentation
       </p>
@@ -117,6 +117,6 @@ you want to log everything to System.Diagnostics.Trace, Common.Logging is for yo
             you can use <a href="Common.Logging~Common.Logging.Simple.CommonLoggingTraceListener.html">CommonLoggingTraceListener</a>
             to redirect all trace output to the Common.Logging infrastructure. </p>
 	<hr />
-	<div id="footer"><p><a href="mailto:netcommon-developer@lists.sourceforge.net?subject=Common%20Logging%202.0%20API%20Reference%20Documentation%20Feedback:%20Introduction">Send comments on this topic.</a></p><p><a>© The Common Infrastructure Libraries for .NET Team 2009 All Rights Reserved.</a></p><p></p></div></div>
+	<div id="footer"><p><a href="mailto:netcommon-developer@lists.sourceforge.net?subject=Common%20Logging%202.1%20API%20Reference%20Documentation%20Feedback:%20Introduction">Send comments on this topic.</a></p><p><a>© The Common Infrastructure Libraries for .NET Team 2012 All Rights Reserved.</a></p><p></p></div></div>
 </body>
 </html>
