@@ -10,8 +10,8 @@
 	<bookinfo>
     <title>Common Infrastructure Libraries for .NET</title>
     <subtitle>Reference Documentation</subtitle>
-    <releaseinfo>Version 2.0</releaseinfo>
-    <pubdate>Last Updated: April 26, 2009</pubdate>
+    <releaseinfo>Version 2.1</releaseinfo>
+    <pubdate>Last Updated: June, 2012</pubdate>
     <authorgroup>
       <author>
         <firstname>Mark</firstname>
@@ -24,6 +24,10 @@
       <author>
         <firstname>Bruno</firstname>
         <surname>Baia</surname>
+      </author>
+	  <author>
+        <firstname>Stephen</firstname>
+        <surname>Bohlen</surname>
       </author>
     </authorgroup>
     <legalnotice>
